syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Protocol";

import "Enum.proto";

message RoomInfo 
{
	int32 roomId = 1;
	int32 mapId = 2;
}
